test/fails/bad_parsing/no_semicolon.lgl
void main() {
    int 5
}
